service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  namespace: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
      name: http
      targetPort: 80
  selector:
    app: wordpress
  type: LoadBalancer
