ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: wordpress
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: blusmurf.net
    external-dns.alpha.kubernetes.io/target: a2fa3c50-694c-4928-aae4-011861843f64.cfargotunnel.com
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  ingressClassName: nginx
  rules:
  - host: blusmurf.net
    http:
       paths:
        - path: /
          pathType: Prefix
          backend:
           service:
            name: wordpress-svc
            port:
              number: 80
